--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,11 +1,11 @@
 footer {
-	background-color: #fff;
-	height: 60px;
-	width: 100%;
-	border-top: 1px #ccc solid;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: fixed;
+	background-color: white;
+    height: 60px;
+    width: 100%;
+    border-top: 1px solid #CCCCCC;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 	bottom: 0;
 }
