--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,29 +1,26 @@
-.filters {
-	position: relative;
-	background-color: #fff;
-	height: 70px;
-	width: 100%;
-	border: 1px #ddd solid;
-	border-radius: 4px;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-ms-border-radius: 4px;
-	-o-border-radius: 4px;
+.filters{
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: solid 1px #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: right;
 }
 
-button {
-	position: absolute;
-	right: 30px;
-	top: 50%;
-	transform: translateY(-50%);
-	background-color: #ff5a5f;
-	color: #fff;
-	height: 48px;
-	width: 20%;
-	border: none;
-	border-radius: 4px;
+section.filters button{
+    font-size: 18px;
+    color: white;
+    background-color: #FF5A5F;
+    height: 48px;
+    border: 0px;
+    border-radius: 4px;
+    width: 20%;
+    margin-right: 30px;
+    opacity: 1;
 }
-
-button:hover {
-	opacity: 90%;
+section.filters button:hover{
+    opacity: 0.9;
 }
