--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,57 +1,51 @@
-.filters {
-	justify-content: space-evenly;
-	position: relative;
-	background-color: #fff;
-	height: 70px;
-	width: 100%;
-	border: 1px #ddd solid;
-	border-radius: 4px;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-ms-border-radius: 4px;
-	-o-border-radius: 4px;
+.filters{
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: solid 1px #DDDDDD;
+    border-radius: 4px;
+    text-align: right;
 }
 
-.locations {
-	border-right: 1px #ddd solid;
+section.filters button{
+    margin-top: 11px;
+    margin-bottom: 11px;
+    margin-right: 30px;
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: white;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
 }
-
-.locations,
-.amenities {
-	height: 100%;
-	width: 25%;
-	line-height: 50%;
-	float: left;
+section.filters button:hover {
+    opacity: 0.9;
 }
-
-h3 {
-	font-weight: 600;
-	margin-left: 50px;
+.locations{
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    border-right: solid 1px #DDDDDD;
+    margin-left: 30px;
+    float: left;
 }
-
-h4 {
-	font-weight: 400;
-	font-size: 14px;
-	margin-left: 50px;
+.amenities{
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    margin-left: 30px;
+    float: left;
 }
-
-button {
-	position: absolute;
-	right: 30px;
-	top: 50%;
-	transform: translateY(-50%);
-	background-color: #ff5a5f;
-	color: #fff;
-	height: 48px;
-	width: 20%;
-	border: none;
-	border-radius: 4px;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
+h3{
+    font-weight: 600;
+    margin: 0px;
+    margin-top: 17px;
+    padding: 0px;
 }
-
-button:hover {
-	opacity: 90%;
+h4{
+    margin: 0px;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 14px;
 }
