--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,89 +1,91 @@
-.filters {
-	justify-content: space-evenly;
-	position: relative;
-	background-color: #fff;
-	height: 70px;
-	width: 100%;
-	border: 1px #ddd solid;
-	border-radius: 4px;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-ms-border-radius: 4px;
-	-o-border-radius: 4px;
+.filters{
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: solid 1px #DDDDDD;
+    border-radius: 4px;
+    text-align: right;
 }
 
-.locations {
-	border-right: 1px #ddd solid;
+section.filters button{
+    margin-top: 11px;
+    margin-bottom: 11px;
+    margin-right: 30px;
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: white;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+}
+section.filters button:hover {
+    opacity: 0.9;
+}
+.locations{
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    border-right: solid 1px #DDDDDD;
+    float: left;
+}
+.amenities{
+    text-align: left;
+    align-content: flex-start;
+    height: 100%;
+    width: 25%;
+    float: left;
+}
+.amenities h3, .locations h3{
+    font-weight: 600;
+    margin: 0px;
+    margin-top: 17px;
+    padding: 0px;
+    padding-left: 30px;
+}
+.amenities h4, .locations h4{
+    margin: 0px;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 14px;
+    padding-left: 30px;
+}
+.popover{
+    visibility: hidden;
+    position: relative;
+    background-color: #FAFAFA;
+    border: solid #DDDDDD 1px;
+    border-radius: 4px;
+    margin-top: 7%;
+    padding-bottom: 10%;
+    z-index: 1;
+}
+.popover li h2{
+    padding: 0;
+    margin: 0;
+}
+.popover_list{
+    padding:0px;
+    margin:0px;
+    padding-left: 10%;
+}
+li{
+    list-style-type: none;
+    padding-bottom: 5%;
+}
+ul{
+    padding-top: 30px;
+}
+.locations:hover >.popover{
+    visibility: visible;
+    margin-bottom: 50px;
 }
 
-.locations,
-.amenities {
-	height: 100%;
-	width: 25%;
-	float: left;
-	line-height: 8px;
+.amenities:hover > .popover{
+    visibility: visible;
 }
 
-.popover {
-	display: none;
-	width: 100%;
-	padding-top: 10px;
-	background-color: #fafafa;
-	list-style-type: none;
-	border: 1px #ddd solid;
-	border-radius: 4px;
-}
-
-.popover ul {
-	padding-bottom: 10px;
-}
-
-.locations:hover .popover {
-	display: block;
-}
-
-.amenities:hover .popover {
-	display: block;
-}
-
-h3 {
-	font-weight: 600;
-	margin-left: 50px;
-}
-
-h4 {
-	font-weight: 400;
-	font-size: 14px;
-	margin-left: 50px;
-}
-
-h2 {
-	margin-left: 20px;
-}
 
 ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-button {
-	position: absolute;
-	right: 30px;
-	top: 50%;
-	transform: translateY(-50%);
-	background-color: #ff5a5f;
-	color: #fff;
-	height: 48px;
-	width: 20%;
-	border: none;
-	border-radius: 4px;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-}
-
-button:hover {
-	opacity: 90%;
+  list-style: none;
 }
